# SUPLspecification

./: CMakeLists.txt
asn1/: SUPL_AUTH_REQ.asn1  SUPL_AUTH_RESP.asn1  SUPL_END.asn1  SUPL_INIT.asn1  SUPL_POS.asn1  SUPL_POS_INIT.asn1  SUPL_RESPONSE.asn1  SUPL_START.asn1  ULP_COMPONENTS.asn1  common.asn1
include/libSUPLspecs/: AltitudeInfo.h  CPICH-Ec-N0.h  CPICH-RSCP.h  CdmaCellInformation.h  CellInfo.h  CellMeasuredResults.h  CellMeasuredResultsList.h  CellParametersID.h  EncodingType.h  FQDN.h  FormatIndicator.h  FrequencyInfo.h  FrequencyInfoFDD.h  FrequencyInfoTDD.h  GsmCellInformation.h  Horandveruncert.h  Horandvervel.h  Horvel.h  Horveluncert.h  IPAddress.h  KeyIdentity.h  KeyIdentity2.h  KeyIdentity3.h  KeyIdentity4.h  LocationId.h  MAC.h  MeasuredResults.h  MeasuredResultsList.h  NMR.h  NMRelement.h  NavigationModel.h  Notification.h  NotificationType.h  Pathloss.h  PosMethod.h  PosPayLoad.h  PosProtocol.h  PosTechnology.h  Position.h  PositionEstimate.h  (+39 more)
src/: AltitudeInfo.c  CMakeLists.txt  CPICH-Ec-N0.c  CPICH-RSCP.c  CdmaCellInformation.c  CellInfo.c  CellMeasuredResults.c  CellMeasuredResultsList.c  CellParametersID.c  EncodingType.c  FQDN.c  FormatIndicator.c  FrequencyInfo.c  FrequencyInfoFDD.c  FrequencyInfoTDD.c  GsmCellInformation.c  Horandveruncert.c  Horandvervel.c  Horvel.c  Horveluncert.c  IPAddress.c  KeyIdentity.c  KeyIdentity2.c  KeyIdentity3.c  KeyIdentity4.c  LocationId.c  MAC.c  Makefile.am.sample  MeasuredResults.c  MeasuredResultsList.c  NMR.c  NMRelement.c  NavigationModel.c  Notification.c  NotificationType.c  Pathloss.c  PosMethod.c  PosPayLoad.c  PosProtocol.c  PosTechnology.c  (+40 more)
