set(HEADER_LIST
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/ULP-PDU.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/UlpMessage.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/SUPLAUTHREQ.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/SETNonce.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/KeyIdentity2.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/SUPLAUTHRESP.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/SPCAuthKey.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/KeyIdentity3.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/SUPLEND.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/SUPLINIT.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/Notification.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/NotificationType.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/EncodingType.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/FormatIndicator.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/SLPMode.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/MAC.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/KeyIdentity.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/SUPLPOS.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/PosPayLoad.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/SUPLPOSINIT.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/RequestedAssistData.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/NavigationModel.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/SatelliteInfo.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/SatelliteInfoElement.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/SUPLRESPONSE.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/SETAuthKey.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/KeyIdentity4.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/SUPLSTART.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/SETCapabilities.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/PosTechnology.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/PrefMethod.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/PosProtocol.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/Version.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/SessionID.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/SetSessionID.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/SETId.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/SlpSessionID.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/IPAddress.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/SLPAddress.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/FQDN.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/Ver.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/LocationId.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/Status.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/CellInfo.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/Position.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/PositionEstimate.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/AltitudeInfo.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/CdmaCellInformation.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/GsmCellInformation.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/WcdmaCellInformation.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/FrequencyInfo.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/FrequencyInfoFDD.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/FrequencyInfoTDD.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/UARFCN.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/NMR.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/NMRelement.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/MeasuredResultsList.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/MeasuredResults.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/CellMeasuredResultsList.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/UTRA-CarrierRSSI.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/CellMeasuredResults.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/CellParametersID.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/TGSN.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/PrimaryCCPCH-RSCP.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/TimeslotISCP.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/TimeslotISCP-List.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/PrimaryCPICH-Info.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/CPICH-Ec-N0.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/CPICH-RSCP.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/Pathloss.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/StatusCode.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/QoP.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/Velocity.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/Horvel.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/Horandvervel.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/Horveluncert.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/Horandveruncert.h
        ${SUPLspec_SOURCE_DIR}/include/libSUPLspec/PosMethod.h
        )


# Make an automatic library - will be static or dynamic based on user setting
add_library(SUPLspec
        ULP-PDU.c
        UlpMessage.c
        SUPLAUTHREQ.c
        SETNonce.c
        KeyIdentity2.c
        SUPLAUTHRESP.c
        SPCAuthKey.c
        KeyIdentity3.c
        SUPLEND.c
        SUPLINIT.c
        Notification.c
        NotificationType.c
        EncodingType.c
        FormatIndicator.c
        SLPMode.c
        MAC.c
        KeyIdentity.c
        SUPLPOS.c
        PosPayLoad.c
        SUPLPOSINIT.c
        RequestedAssistData.c
        NavigationModel.c
        SatelliteInfo.c
        SatelliteInfoElement.c
        SUPLRESPONSE.c
        SETAuthKey.c
        KeyIdentity4.c
        SUPLSTART.c
        SETCapabilities.c
        PosTechnology.c
        PrefMethod.c
        PosProtocol.c
        Version.c
        SessionID.c
        SetSessionID.c
        SETId.c
        SlpSessionID.c
        IPAddress.c
        SLPAddress.c
        FQDN.c
        Ver.c
        LocationId.c
        Status.c
        CellInfo.c
        Position.c
        PositionEstimate.c
        AltitudeInfo.c
        CdmaCellInformation.c
        GsmCellInformation.c
        WcdmaCellInformation.c
        FrequencyInfo.c
        FrequencyInfoFDD.c
        FrequencyInfoTDD.c
        UARFCN.c
        NMR.c
        NMRelement.c
        MeasuredResultsList.c
        MeasuredResults.c
        CellMeasuredResultsList.c
        UTRA-CarrierRSSI.c
        CellMeasuredResults.c
        CellParametersID.c
        TGSN.c
        PrimaryCCPCH-RSCP.c
        TimeslotISCP.c
        TimeslotISCP-List.c
        PrimaryCPICH-Info.c
        CPICH-Ec-N0.c
        CPICH-RSCP.c
        Pathloss.c
        StatusCode.c
        QoP.c
        Velocity.c
        Horvel.c
        Horandvervel.c
        Horveluncert.c
        Horandveruncert.c
        PosMethod.c
        )

target_include_directories(SUPLspec PUBLIC ../include/libSUPLspecs)

# All users of this library will need at least C++11
target_compile_features(SUPLspec PUBLIC cxx_std_11)

# IDEs should put the headers in a nice place
source_group(
        TREE "${PROJECT_SOURCE_DIR}/include"
        PREFIX "Header Files"
        FILES ${HEADER_LIST})
